
<resources>
    <string name="app_name">Lemonade</string>
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to eat glass!</string>
    <string name="lemon_final">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="user_name">Tastan Arman</string>
    <string name="btn">Click me or click image</string>
</resources>
